--- a/src/web.public/public/stylesheets/main.css
+++ b/src/web.public/public/stylesheets/main.css
@@ -1,3 +1,5 @@
+[ng\:cloak], [ng-cloak], .ng-cloak { display: none; }
+
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
