--- a/src/web.public/public/templates/directives/akin-header.html
+++ b/src/web.public/public/templates/directives/akin-header.html
@@ -5,7 +5,7 @@
         </div>
         <div ng-switch-default>
             <p>App ~ Akin</p>
-            <div searchbox></div>
+            <div akin-searchbox></div>
         </div>
     </div>
 </header>
