--- a/src/web.public/public/stylesheets/main.css
+++ b/src/web.public/public/stylesheets/main.css
@@ -19,15 +19,16 @@ input[type="radio"]{
 
 input[type="radio"] + img
 {
-    border: 2px #fff;
+    border: 4px #fff;
     padding: 10px;
     display:inline-block;
     -moz-border-radius: 15px;
     border-radius: 15px;
+    color: #555;
 }
 
 input[type="radio"]:checked + img
 {
-    border: 2px solid;
+    border: 4px solid;
     padding: 10px;
 }
