--- a/src/web.public/public/stylesheets/main.css
+++ b/src/web.public/public/stylesheets/main.css
@@ -32,3 +32,14 @@ input[type="radio"]:checked + img
     border: 4px solid;
     padding: 10px;
 }
+
+ul.disabled {
+    display: none;
+}
+
+main .akin-logo {
+    width: 349px;
+    height: 97px;
+    background-image: url('/public/images/logo.png');
+    background-size: 349px 97px;
+}
