more work on home page

--- a/src/web.public/public/stylesheets/includes/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/includes/_allmighty-autocomplete.scss
@@ -6,19 +6,20 @@
 }
 
 .autocomplete input{
-    font-size: 1.2em;
-    width: 100%;
-    padding:0.4em;
+    //font-size: 1.2em;
+    //width: 100%;
+    //padding:0.4em;
 }
 
-.autocomplete ul{
+.autocomplete ul {
     position: absolute;
     left: 0;
     width: 100%;
-    border-left: 1px solid #888;
-    border-right: 1px solid #888;
-    border-bottom: 1px solid #888;
+    border-left: 2px solid #888;
+    border-right: 2px solid #888;
+    border-bottom: 2px solid #888;
     z-index: 1;
+    background-color: white;
 }
 
 .autocomplete li{
@@ -26,19 +27,15 @@
     list-style:none;
     width: 100%;
     padding:0.4em;
-    background-color: #fff;
+    background-color: white;
+  line-height: 0.8em;
 }
 
 .autocomplete li.active{
     width: 100%;
-    background-color: #4bf;
+    background-color: $main-spot-colour;
 }
 
-.autocomplete .highlight {
-    background-color: #E2E2E2;
-}
-
-.autocomplete li.active .highlight {
-    background: #666;
-    color: #fff;
+.autocomplete em {
+  font-weight: bold;
 }
