--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -1,18 +1,14 @@
 
 $light-background-colour: #fff;
 $dark-background-colour: #444;
-$highlight-color: rgb(202, 219, 42);
-$active-input-colour: #888;
-$light-pressed-input-colour: #aaa;
-$searchbox-height: 26px;
-$watermark-colour: red;
-$input-border-width: 2px;
-$large-button-border-width: 3px;
-$large-border-radius: 10px;
-$small-border-radius: 6px;
-$large-border-radius-inner: $large-border-radius - $large-button-border-width;
-$body-text-font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
+$main-spot-colour: rgb(202, 219, 42);
+$background-spot-colour: #aaa;
+$input-border-colour: #888;
 
+$input-border-width: 2px;
+$large-border-radius: 10px;
+
+$body-text-font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
 
 // Uncomment these lines to display the grid.
 //$visual-grid: true;
@@ -26,6 +22,7 @@ $body-text-font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
 @import "includes/allmighty-autocomplete";
 
 $break-small: 320px;
+$break-medium: 800px;
 $break-large: 1024px;
 
 @mixin respond-to($media) {
@@ -33,7 +30,7 @@ $break-large: 1024px;
     @media only screen and (max-width: $break-small) { @content; }
   }
   @else if $media == medium-screens {
-    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+    @media only screen and (min-width: $break-medium + 1) { @content; }
   }
   @else if $media == wide-screens {
     @media only screen and (min-width: $break-large) { @content; }
@@ -42,17 +39,22 @@ $break-large: 1024px;
 
 body {
   @include outer-container;
-  header { @include span-columns(12); }
+
+  font-family: $body-text-font-family;
+  min-width: 320px;
+
+  header {
+    @include span-columns(12);
+  }
+
   main {
     @include span-columns(12);
-    //margin-top: 25%;
-    margin-top: 50px;
+    margin-top: 50px; // stops footer encroaching on search box on home page.
   }
-  footer { @include span-columns(12); }
-}
 
-body {
-  font-family: $body-text-font-family;
+  footer {
+    @include span-columns(12);
+  }
 }
 
 header {
@@ -60,10 +62,9 @@ header {
 
   ul.social-media-links {
     float: right;
-    padding: 0 2px 2px 2px;
+    padding: 0 3px 2px 2px;
 
     li {
-      //display: block;
       float: left;
 
       a {
@@ -71,6 +72,18 @@ header {
         background-image: url('/public/images/social-media-sprite-32.png');
         width: 32px;
         height: 32px;
+      }
+
+      @media only screen and (min-device-pixel-ratio: 1.3),
+      only screen and (-webkit-min-device-pixel-ratio: 1.3),
+      only screen and (min--moz-device-pixel-ratio: 1.3),
+      only screen and (-o-min-device-pixel-ratio: 1.3 / 1),
+      only screen and (min-resolution: 125dpi),
+      only screen and (min-resolution: 1.3dppx) {
+        a {
+          background-image: url('/public/images/social-media-sprite-64.png');
+          background-size: 64px 32px;
+        }
       }
 
       a.facebook-link {
@@ -87,21 +100,30 @@ header {
   }
 }
 
+// Push footer down.
+html, body {
+  height: 100%;
+}
+.content-wrapper {
+  min-height: 100%;
+  margin: 0 auto -4.75em;
+}
+footer, .push {
+  height: 4.75em;
+}
 
-//@media only screen and (min-device-pixel-ratio: 1.3),
-//only screen and (-webkit-min-device-pixel-ratio: 1.3),
-//only screen and (min--moz-device-pixel-ratio: 1.3),
-//only screen and (-o-min-device-pixel-ratio: 1.3 / 1),
-//only screen and (min-resolution: 125dpi),
-//only screen and (min-resolution: 1.3dppx) {
-//  header {
-//    margin-top: 100px;
-//  }
-//a {
-//  background-image: url('/public/images/social-media-sprite-64.png');
-//}
-//}
+// Stop mobile browsers zooming in on select
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  select:focus, textarea:focus, input:focus {
+    font-size: 16px;
+  }
+}
 
+// Stop safari giving round corners to select boxes.
+input, textarea {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
+}
 
 #home-page div.akin-logo {
   img {
@@ -115,36 +137,43 @@ header {
     -ms-interpolation-mode: bicubic;
   }
 
+  @include respond-to(medium-screens) {
+    img {
+      width: 258px;
+      height: 72px;
+    }
+  }
+
   // TODO: not sure how to handle logo here - I'm currently using a large one everywhere that gets shrunk down as needed.
 }
 
-
-//#home-page form {
-//  margin-top: 3%;
-//}
-
-form.searchbox {
-  input[type="radio"] {
-    display: none;
-  }
+// Ensure mobile browsers in landscape mode leave enough space below the searchbox.
+#home-page {
+  padding-bottom: 200px;
 }
 
 #home-page form.searchbox {
   $big-button-padding: 3px;
   $big-button-margin: 10px;
-  $big-button-img-dim: 60px;
 
   .platform-input {
-    //display: table; margin: 0 auto;
     display: block;
-    width: (($big-button-img-dim + ($large-button-border-width * 2) + ($big-button-padding * 2)) * 3) + ($big-button-margin * 2);
+    width: ((40 + ($input-border-width * 2) + ($big-button-padding * 2)) * 3) + ($big-button-margin * 2);
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 6px;
 
+    @include respond-to(medium-screens) {
+      width: ((60 + ($input-border-width * 2) + ($big-button-padding * 2)) * 3) + ($big-button-margin * 2);
+    }
+
     input {
       margin: 0;
       padding: 0;
+    }
+
+    input[type="radio"] {
+      display: none;
     }
 
     img {
@@ -152,11 +181,16 @@ form.searchbox {
       float: left;
       padding: $big-button-padding;
       margin-right: $big-button-margin;
-      width: $big-button-img-dim + ($large-button-border-width * 2) + ($big-button-padding * 2);
-      height: $big-button-img-dim + ($large-button-border-width * 2) + ($big-button-padding * 2);
-      border: $large-button-border-width solid $light-background-colour;
+      width: 40 + ($input-border-width * 2) + ($big-button-padding * 2);
+      height: 40 + ($input-border-width * 2) + ($big-button-padding * 2);
+      border: $input-border-width solid transparent;
       @include border-top-radius($large-border-radius);
       @include border-bottom-radius($large-border-radius);
+
+      @include respond-to(medium-screens) {
+        width: 60 + ($input-border-width * 2) + ($big-button-padding * 2);
+        height: 60 + ($input-border-width * 2) + ($big-button-padding * 2);
+      }
     }
 
     img.last {
@@ -164,48 +198,60 @@ form.searchbox {
     }
 
     input[type="radio"]:checked + img {
-      border: $large-button-border-width solid $active-input-colour;
+      border: $input-border-width solid $input-border-colour;
+      -moz-box-shadow:    inset 0 0 5px $main-spot-colour;
+      -webkit-box-shadow: inset 0 0 5px $main-spot-colour;
+      box-shadow:         inset 0 0 5px $main-spot-colour;
     }
   }
 
+  // http://stackoverflow.com/questions/5825861/how-to-make-text-input-box-to-occupy-all-the-remaining-width-within-parent-block
   .search-input {
-    position: relative;
-    width: 95%;
+    width: 90%;
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
-    background-color: $active-input-colour;
-    padding: $input-border-width;
-    font-size: 0.8em;
 
     div {
-      padding-right: $searchbox-height + $input-border-width;
+      display: table;
+      width: 100%;
+      background-color: $input-border-colour;
+      padding: 0 2px;
     }
 
-    input[type="text"] {
-      border: none;
-      margin: 0;
-      height: $searchbox-height;
+    div span.wrapper {
+      display: table-cell;
+      width: 100%;
+      vertical-align: middle;
     }
 
-    button {
-      position: absolute;
-      top: $input-border-width;
-      right: $input-border-width;
-      padding: 0;
-      width: $searchbox-height;
-      height: $searchbox-height;
-      border: none;
-      background-color: $active-input-colour;
+    div input[type="text"] {
+      display:
+      table-cell;
+      vertical-align: middle;
+      width: 100%;
+      //font-size: 0.9em;
+      font-size: 16px;
+      padding: 3px;
+
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      border: 2px solid transparent; /* Here */
+    }
+
+    div button {
+      display: table-cell;
+      border: 0;
+      padding: 2px 0 0 0;
+      background: transparent;
+      vertical-align: middle;
+      width: 40px;
 
       img {
-        width: $searchbox-height;
-        height: $searchbox-height;
+        vertical-align: middle;
+        width: 26px;
+        height: 26px;
       }
-    }
-
-    button:active {
-      background-color: $light-pressed-input-colour;
     }
   }
 }
@@ -214,14 +260,12 @@ footer {
   background-color: $dark-background-colour;
 
   p.call-to-action {
-    background-color: $light-pressed-input-colour;
-    padding: 6px;
+    background-color: $background-spot-colour;
+    padding: 8px;
     width: 95%;
     max-width: 25em;
     margin: 6px auto;
     font-size: 0.9em;
-    @include border-top-radius($small-border-radius);
-    @include border-bottom-radius($small-border-radius);
     text-align: center;
 
     a,
@@ -242,7 +286,7 @@ footer {
   p.copyright {
     padding-top: 3px;
     font-size: 0.6em;
-    color: $light-pressed-input-colour;
+    color: $background-spot-colour;
     margin-bottom: 2px;
     text-align: center;
     clear: both; // TODO find better solution.
@@ -263,7 +307,7 @@ footer {
         position: relative; /* ie needs position:relative here*/
         //display: inline;
         list-style-type: none;
-        color: $highlight-color;
+        color: $main-spot-colour;
 
         a {
           text-decoration: none;
@@ -281,7 +325,7 @@ footer {
         a:visited,
         a:hover,
         a:active {
-          color: $highlight-color;
+          color: $main-spot-colour;
           font-weight: normal;
           font-size: 0.9em;
         }
