--- a/src/web.public/public/stylesheets/main.scss
+++ b/src/web.public/public/stylesheets/main.scss
@@ -5,486 +5,20 @@
 //$visual-grid-index: front;
 //$visual-grid-opacity: 0.1;
 
-@import "includes/meyer-reset";
 @import 'bourbon/bourbon';
 @import 'neat/neat';
-
-$main-spot-colour: #2b8780;
-$dark-main-spot-color: #58847e;
-$secondary-spot-colour: rgb(163, 89, 49);
-$background-spot-colour: #aaa;
-$main-background-colour: #fff;
-$light-background-colour: #e6e6df;
-$dark-background-colour: #444;
-$input-border-colour: #333;
-$light-black-colour: #666;
-$alt-black-colour: #78725b;
-$light-light-black-colour: #999;
-$placeholder-text-colour: #aaa;
-$placeholder-text-colour-firefox-darken: 30%;
-
-$big-button-padding: 6px;
-$big-button-margin: 10px;
-$big-button-dim-for-small-screens: 40px;
-$big-button-dim-for-large-screens: 50px;
-
-$input-border-width: 2px;
-$large-border-radius: 6px;
-
-$body-text-font-family: 'Open Sans', 'Helvetica', 'Arial', sans-serif;
-
-@import "includes/allmighty-autocomplete";
-
-$break-small: 320px;
-$break-medium: 800px;
-$break-large: 1024px;
-
-@mixin respond-to($media) {
-  @if $media == handhelds {
-    @media only screen and (max-width: $break-small) { @content; }
-  }
-  @else if $media == medium-screens {
-    @media only screen and (min-width: $break-medium + 1) { @content; }
-  }
-  @else if $media == wide-screens {
-    @media only screen and (min-width: $break-large) { @content; }
-  }
-}
-
-body {
-  @include outer-container;
-
-  font-family: $body-text-font-family;
-  min-width: 320px;
-
-  header {
-    @include span-columns(12);
-  }
-
-  main {
-    @include span-columns(12);
-    margin-top: 30px; // stops footer encroaching on search box on home page.
-  }
-
-  footer {
-    @include span-columns(12);
-  }
-}
-
-header {
-  ul.social-media-links {
-    float: right;
-    padding: 0 3px 2px 2px;
-    background-color: $light-background-colour;
-    @include border-bottom-radius($large-border-radius);
-
-    li {
-      float: left;
-
-      a {
-        display: block;
-        background-image: url('/public/images/social-media-sprite-32.png');
-        width: 32px;
-        height: 32px;
-      }
-
-      @media only screen and (min-device-pixel-ratio: 1.3),
-      only screen and (-webkit-min-device-pixel-ratio: 1.3),
-      only screen and (min--moz-device-pixel-ratio: 1.3),
-      only screen and (-o-min-device-pixel-ratio: 1.3 / 1),
-      only screen and (min-resolution: 125dpi),
-      only screen and (min-resolution: 1.3dppx) {
-        a {
-          background-image: url('/public/images/social-media-sprite-64.png');
-          background-size: 64px 32px;
-        }
-      }
-
-      a.facebook-link {
-        background-position: 0 0;
-        margin-right: 2px;
-      }
-
-      a.twitter-link {
-        background-position: 32px 0;
-      }
-    }
-  }
-}
-
-// Push footer down.
-html, body {
-  height: 100%;
-}
-.content-wrapper {
-  min-height: 100%;
-  margin: 0 auto -96px;
-}
-
-@include respond-to(medium-screens) {
-  .content-wrapper {
-    margin: 0 auto -80px;
-  }
-}
-
-footer, .push {
-  height: 96px;
-}
-
-@include respond-to(medium-screens) {
-  footer, .push {
-    height: 80px;
-  }
-}
-
-// Stop mobile browsers zooming in on select
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  select:focus, textarea:focus, input:focus {
-    font-size: 16px;
-  }
-}
-
-// Stop safari giving round corners to select boxes.
-input, textarea {
-  -webkit-appearance: none;
-  -webkit-border-radius: 0;
-}
-
-// Placeholder text styling.
-::-webkit-input-placeholder {
-  color: $placeholder-text-colour;
-}
-:-moz-placeholder { /* Firefox 18- */
-  color: shade($placeholder-text-colour, $placeholder-text-colour-firefox-darken);
-}
-::-moz-placeholder {  /* Firefox 19+ */
-  color: shade($placeholder-text-colour, $placeholder-text-colour-firefox-darken);
-}
-:-ms-input-placeholder {
-  color: $placeholder-text-colour;
-}
-
-// Remove placeholder text on focus
-:focus::-webkit-input-placeholder { color: transparent; }
-:focus:-moz-placeholder { color: transparent; }
-:focus::-moz-placeholder { color: transparent; }
-:focus:-ms-input-placeholder { color: transparent; }
-
-#home-page div.akin-logo {
-  img {
-    display: block;
-    width: 194px;
-    height: 54px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 12px;
-    -ms-interpolation-mode: bicubic;
-  }
-
-  @include respond-to(medium-screens) {
-    img {
-      width: 291px;
-      height: 81px;
-    }
-  }
-
-  // TODO: not sure how to handle logo here - I'm currently using a large one everywhere that gets shrunk down as needed.
-}
-
-// Ensure mobile browsers in landscape mode leave enough space below the searchbox.
-#home-page {
-  padding-bottom: 200px;
-}
-
-#home-page form.searchbox {
-
-  .platform-input {
-    display: table;
-    width: ($big-button-dim-for-small-screens + ($input-border-width * 2) + ($big-button-padding * 2)) * 3 + ($big-button-margin * 4);
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 16px;
-
-    @include respond-to(medium-screens) {
-      width: (($big-button-dim-for-large-screens + ($input-border-width * 2) + ($big-button-padding * 2)) * 3) + ($big-button-margin * 4);
-    }
-
-    label {
-      display: table-cell;
-      padding: 0px $big-button-margin;
-      width: $big-button-dim-for-small-screens + ($input-border-width * 2) + ($big-button-padding * 2);
-      height: $big-button-dim-for-small-screens + ($input-border-width * 2) + ($big-button-padding * 2);
-
-      @include respond-to(medium-screens) {
-        width: $big-button-dim-for-large-screens + ($input-border-width * 2) + ($big-button-padding * 2);
-        height: $big-button-dim-for-large-screens + ($input-border-width * 2) + ($big-button-padding * 2);
-      }
-    }
-
-    input[type="radio"] {
-      display: none;
-    }
-
-    input {
-      margin: 0;
-      padding: 0;
-    }
-
-    img {
-      width: $big-button-dim-for-small-screens;
-      height: $big-button-dim-for-small-screens;
-
-      @include respond-to(medium-screens) {
-        width: $big-button-dim-for-large-screens;
-        height: $big-button-dim-for-large-screens;
-      }
-    }
-
-    img.last {
-      margin-right: 0px;
-    }
-
-    div {
-      display: block;
-      position: relative;
-      padding: $big-button-padding;
-      width: $big-button-dim-for-small-screens + ($big-button-padding * 2) + ($input-border-width * 2);
-      height: $big-button-dim-for-small-screens + ($big-button-padding * 2) + ($input-border-width * 2);
-
-      border: $input-border-width solid transparent;
-      @include border-top-radius($large-border-radius);
-      @include border-bottom-radius($large-border-radius);
-
-      @include respond-to(medium-screens) {
-        width: $big-button-dim-for-large-screens + ($big-button-padding * 2) + ($input-border-width * 2);
-        height: $big-button-dim-for-large-screens + ($big-button-padding * 2) + ($input-border-width * 2);
-      }
-    }
-
-    input[type="radio"]:checked + div {
-      //background-color: $main-spot-colour;
-      border: $input-border-width solid $main-spot-colour;
-    }
-
-    input[type="radio"]:checked + div:after,
-    input[type="radio"]:checked + div:before {
-      top: 100%;
-      left: 50%;
-      border: solid transparent;
-      content: " ";
-      height: 0;
-      width: 0;
-      position: absolute;
-      pointer-events: none;
-    }
-
-    input[type="radio"]:checked + div:after {
-      border-color: rgba(255, 255, 255, 0);
-      border-top-color: #ffffff;
-      border-width: 10px;
-      margin-left: -10px;
-    }
-
-    input[type="radio"]:checked + div:before {
-      border-color: rgba(90, 245, 12, 0);
-      border-top-color: $main-spot-colour;
-      border-width: 13px;
-      margin-left: -13px;
-    }
-  }
-
-  // http://stackoverflow.com/questions/5825861/how-to-make-text-input-box-to-occupy-all-the-remaining-width-within-parent-block
-  .search-input {
-    width: 95%;
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-
-    div {
-      display: table;
-      width: 100%;
-      //background-color: $input-border-colour;
-      padding: 0 2px;
-    }
-
-    div span.wrapper {
-      display: table-cell;
-      width: 100%;
-      vertical-align: middle;
-    }
-
-    div input[type="text"] {
-      display:
-      table-cell;
-      vertical-align: middle;
-      width: 100%;
-      font-size: 16px;
-      height: 28px;
-      padding: 3px;
-
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      //border: 2px solid transparent; /* Here */
-      border: 1px solid $input-border-colour;
-      border-right-width: 0px;
-    }
-
-    div button {
-      @include button($main-spot-colour);
-
-      display: table-cell;
-      //border: 1px solid red;
-      margin: 0;
-      background-color: black;
-      vertical-align: middle;
-      padding: 0px 7px;
-
-      @include border-top-radius(0);
-      @include border-bottom-radius(0);
-
-      img {
-        vertical-align: middle;
-        //margin-left: auto;
-        //margin-right: auto;
-        width: 26px;
-        height: 26px;
-        //max-width: 100%;
-        //height: auto;
-      }
-    }
-  }
-}
-
-footer {
-  p.call-to-action {
-    background-color: $dark-main-spot-color;
-    padding: 8px;
-    width: 100%;
-    margin: 6px auto;
-    text-align: center;
-
-    a, a:link, a:visited, a:hover, a:active {
-      color: white;
-      text-decoration: none;
-      font-weight: normal;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
-
-    a em {
-      font-weight: bold;
-    }
-  }
-
-  .footer-nav {
-    float: right;
-    position: relative;
-    left: -50%;
-    text-align: left;
-    margin-bottom: 8px;
-
-    @include respond-to(medium-screens) {
-      float: left;
-      left: 0px;
-      margin-left: 50px;
-      line-height: 24px;
-    }
-
-    ul {
-      position: relative;
-      left: 50%;
-
-      @include respond-to(medium-screens) {
-        left: 0px;
-      }
-
-      li {
-        float: left;
-        position: relative; /* IE needs position:relative here*/
-        list-style-type: none;
-        color: $alt-black-colour;
-        font-variant: uppercase;
-
-        a {
-          text-decoration: none;
-          float: left;
-          text-align: center;
-          white-space: nowrap;
-        }
-
-        a, a:link, a:visited, a:hover, a:active {
-          color: $alt-black-colour;
-          font-weight: normal;
-          font-size: 15px;
-        }
-
-        a, //a:link,
-        a:visited, a:active {
-          text-decoration: none;
-        }
-
-        a:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-
-  .footer-copyright {
-    display: table;
-    //margin: 0 5px;
-    clear: both;
-    width: 90%;
-    max-width: 320px;
-    margin-left: auto;
-    margin-right: auto;
-    //background-color: $light-background-colour;
-
-    @include respond-to(medium-screens) {
-      float: right;
-      clear: none;
-      margin-left: 0px;
-      margin-right: 50px;
-    }
-
-    span, p {
-      display: table-cell;
-      vertical-align: middle;
-    }
-
-    p {
-      width: 100%;
-      text-align: right;
-    }
-
-    img {
-      width: 80px;
-      height: 22px;
-    }
-  }
-
-  p.copyright {
-    padding-top: 3px;
-    font-size: 10px;
-    color: $light-light-black-colour;
-    margin-bottom: 2px;
-  }
-}
-
-@-ms-viewport { width: device-width; }
-@-o-viewport { width: device-width; }
-@viewport { width: device-width; }
-
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-  display: none !important;
-}
-
-#search-results ul.disabled {
-  color: #bbb;
-}
-
-#search-results ul.disabled a {
-  color: #bbb;
-}
+@import "vendor/mq";
+
+@import "partials/base";
+
+
+@import "partials/reset";
+@import "partials/grids";
+@import "partials/typography";
+@import "partials/allmighty-autocomplete";
+@import "partials/links";
+@import "partials/menus";
+@import "partials/text-controls";
+@import "partials/logos";
+@import "partials/custom-controls";
+@import "partials/lists";
