--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -132,6 +132,7 @@ $searchbox-border-colour: $control-border-colour;
     font-size: 16px;
     height: 28px;
     padding: 3px;
+    line-height: 28px;
 
     -webkit-appearance: none;
     -moz-appearance: none;
