--- a/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
+++ b/src/web.public/public/stylesheets/partials/_allmighty-autocomplete.scss
@@ -5,12 +5,6 @@
     position: relative;
 }
 
-.autocomplete input{
-    //font-size: 1.2em;
-    //width: 100%;
-    //padding:0.4em;
-}
-
 .autocomplete ul {
     position: absolute;
     left: 0;
@@ -28,12 +22,13 @@
     width: 100%;
     padding:0.4em;
     background-color: white;
-  line-height: 0.8em;
+    line-height: 0.8em;
 }
 
 .autocomplete li.active{
     width: 100%;
     background-color: $main-spot-colour;
+    color: white;
 }
 
 .autocomplete em {
