--- a/src/web.public/public/stylesheets/partials/_custom-controls.scss
+++ b/src/web.public/public/stylesheets/partials/_custom-controls.scss
@@ -159,3 +159,110 @@ $searchbox-border-colour: $control-border-colour;
     }
   }
 }
+
+
+
+
+header div.content-wrapper {
+  @include mq($from: 569px) {
+    display: table;
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  span.content-wrapper {
+    display: table-cell;
+    vertical-align: bottom;
+    width: 200px;
+  }
+
+  div.searchbox-wrapper {
+    display: table-cell;
+    vertical-align: bottom;
+    width: 100%;
+  }
+}
+
+header img.akin-logo {
+  width: 80px;
+  height: 22px;
+  //margin: 3px 0 0 3px;
+  //float: left;
+
+  position: absolute;
+  left: 3px;
+  top: 3px;
+
+  @include mq($from: 569px) {
+    width: 138px;
+    height: 38px;
+    margin: 0px 12px 3px 0px;
+    position: relative;
+  }
+}
+
+header form.searchbox {
+  @include mq($from: 569px) {
+    margin-left: auto;
+    margin-right: auto;
+    //max-width: 568px
+  }
+}
+
+header form.searchbox .search-input {
+  width: 100%;
+  //max-width: 400px;
+  //margin-left: auto;
+  //margin-right: auto;
+  background-color: $main-spot-colour;
+  padding: 3px 1px;
+  @include border-top-radius(3px);
+  @include border-bottom-radius(3px);
+
+  div {
+    display: table;
+    width: 100%;
+    padding: 0 2px;
+  }
+
+  div span.wrapper {
+    display: table-cell;
+    width: 100%;
+    vertical-align: middle;
+  }
+
+  div input[type="text"] {
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    font-size: 16px;
+    height: 28px;
+    padding: 3px;
+    line-height: 28px;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: 1px solid $searchbox-border-colour;
+    border-right-width: 0px;
+  }
+
+  div button {
+    @include button($searchbox-button-colour);
+
+    display: table-cell;
+    margin: 0;
+    background-color: black;
+    vertical-align: middle;
+    padding: 0px 7px;
+
+    @include border-top-radius(0);
+    @include border-bottom-radius(0);
+
+    img {
+      vertical-align: middle;
+      width: 26px;
+      height: 26px;
+    }
+  }
+}
