--- a/src/web.public/public/stylesheets/partials/_grids.scss
+++ b/src/web.public/public/stylesheets/partials/_grids.scss
@@ -51,3 +51,10 @@ header, footer { height: 1px; }
   // Ensure mobile browsers in landscape mode leave enough space below the searchbox.
   //padding-bottom: 100px;
 }
+
+#search-results {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
